--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </div>
   <div class="relative">
     <h3 class="font-normal text-14 md:text-18 leading-3 mb-3 duration-5 anim anim--right" data-anim="hidden">Первая аптечная управленческая франшиза</h3>
-    <div class="flex mb-5 md:mb-10 xl:-mb-14">
+    <div class="flex mb-10 xl:-mb-14">
       <h1 class="font-medium uppercase text-26 sm:text-30 md:text-36 lg:text-42 leading-3 xl:mr-10 duration-5 delay-1 anim anim--right" data-anim="hidden">
         СТАНЬТЕ ЧАСТЬЮ УСПЕШНОЙ <br class="hidden lg:block"> АПТЕЧНОЙ СЕТИ И <b>ПОЛУЧИТЕ <br class="hidden lg:block"> ЭКСКЛЮЗИВНЫЕ ПРЕИМУЩЕСТВА</b>
       </h1>
@@ -37,45 +37,45 @@
       </div>
     </div>
     <div class="flex flex-col xl:flex-row xl:justify-between">
-      <div class="order-2 xl:order-1 flex flex-col items-start">
-        <div class="flex flex-col gap-3 sm:mb-5 xl:mb-14 duration-5 delay-2 anim anim--right" data-anim="hidden">
+      <div class="flex flex-col items-start mb-10 xl:mb-0">
+        <div class="order-2 sm:order-1 flex flex-col gap-3 sm:mb-8 xl:mb-14 duration-5 delay-2 anim anim--right" data-anim="hidden">
           <div class="flex items-center">
             <span class="icon bg-second rounded-max text-10 mr-3"></span>
             <span class="font-normal text-18 sm:text-20 md:text-24 leading-2">Известный бренд</span>
           </div>
           <div class="flex items-center">
             <span class="icon bg-second rounded-max text-10 mr-3"></span>
-            <span class="font-normal text-18 sm:text-20 md:text-24 leading-2">Лучшие условия по маркетингу от поставщиков</span>
+            <span class="font-normal text-18 sm:text-20 md:text-24 leading-2">Лучшие условия по маркетингу <br class="sm:hidden"> от поставщиков</span>
           </div>
           <div class="flex items-center">
             <span class="icon bg-second rounded-max text-10 mr-3"></span>
             <span class="font-normal text-18 sm:text-20 md:text-24 leading-2">Без паушального взноса и роялти</span>
           </div>
         </div>
-        <div class="flex flex-col md:flex-row md:items-center relative w-full md:w-auto">
-          <div class="order-2 md:order-1 ml-auto mr-auto md:ml-0 md:mr-7 duration-5 delay-3 anim anim--right" data-anim="hidden">
-            <button class="btn btn-primary btn-lg sm:btn-xl btn-fill uppercase text-18 sm:text-24" data-waved="light">
+        <div class="order-1 sm:order-2 flex flex-col md:flex-row md:items-center relative w-full md:w-auto mb-5 sm:mb-0">
+          <div class="mb-3 md:mb-0 md:ml-0 md:mr-7 duration-5 delay-3 anim anim--right" data-anim="hidden">
+            <button class="btn btn-primary btn-lg sm:btn-xl btn-fill uppercase text-18 sm:text-24 w-full md:w-auto" data-waved="light">
               СКАЧАТЬ ПРЕЗЕНТАЦИЮ
               <svg class="icon hidden sm:block text-28 ml-2">
                 <use xlink:href="img/icons.svg#download">
               </svg>
             </button>
           </div>
-          <div class="order-1 md:order-2 relative w-full max-w-[260px] md:max-w-[190px] mx-auto md:mx-0 duration-5 delay-4 anim anim--up" data-anim="hidden">
-            <div class="pack pack-rect-lg">
+          <div class="flex md:flex-col items-center md:items-start relative w-full md:max-w-[190px] duration-5 delay-4 anim anim--up" data-anim="hidden">
+            <div class="pack pack-rect-lg w-full max-w-[120px] sm:max-w-[160px] md:max-w-full">
               <picture>
                 <source srcset="img/pictures/presentation.webp" type="image/webp">
                 <img class="image md:image-right" src="img/pictures/presentation.png" alt="">
               </picture>
             </div>
-            <p class="relative -top-6 font-normal text-center md:text-left text-16 leading-2">
+            <p class="relative md:-top-6 font-normal text-16 leading-2">
               31 слайд о том, <span class="font-semibold">как мы изменим ваш бизнес</span>
             </p>
             <img class="hidden md:block absolute -left-[120px] bottom-6 w-[100px]" src="img/pictures/arrow.svg" alt="">
           </div>
         </div>
       </div>
-      <div class="order-1 xl:order-2 pack pack-box bg-grey rounded-[40px_500px_500px_500px] border-[3px] border-solid border-white shadow-lg w-full max-w-[600px] xl:max-w-[435px] mb-7 sm:mb-10 xl:mb-0 mx-auto xl:mx-0 duration-7 delay-2 anim anim--left" data-movement="light" data-anim="hidden">
+      <div class="pack pack-box bg-grey rounded-[40px_500px_500px_500px] border-[3px] border-solid border-white shadow-lg w-full max-w-[600px] xl:max-w-[435px] sm:mb-10 xl:mb-0 mx-auto xl:mx-0 duration-7 delay-2 anim anim--left" data-movement="light" data-anim="hidden">
         <div class="loader">
           <span class="loader-progress">
             <svg class="loader-icon icon">
@@ -139,7 +139,7 @@
       <% for (var i = 0; i < advantages.length; i++) { %>
       <div class="flex flex-col">
         <div class="flex items-center mb-6 md:mb-9 duration-5 anim anim--up" data-anim="hidden">
-          <div class="flex items-center justify-center relative bg-white rounded-max shadow-lg w-[90px] min-w-[90px] h-[90px] md:w-[115px] md:min-w-[115px] md:h-[115px]" data-waved="dark">
+          <div class="flex items-center justify-center relative bg-white rounded-max shadow-lg w-[90px] min-w-[90px] h-[90px] md:w-[115px] md:min-w-[115px] md:h-[115px]">
             <img class="icon text-6xl md:text-7xl" src="<%= advantages[i].icon %>" alt="">
           </div>
           <div class="flex items-center justify-center <%= advantages[i].bg %> text-white rounded-[26px_0px_26px_26px] w-full min-h-[60px] md:min-h-[85px] p-3 -ml-[45px] md:-ml-[57px]">
@@ -149,7 +149,7 @@
         <div class="flex flex-col gap-4">
           <% for (var j = 0; j < advantages[i].listing.length; j++) { %>
           <div class="duration-5 anim anim--up" data-anim="hidden">
-            <div class="card rounded-[26px_0px_26px_26px] min-h-[75px] md:min-h-[95px] py-4 px-4 md:py-5 md:px-9" data-waved="dark">
+            <div class="card rounded-[26px_0px_26px_26px] min-h-[75px] md:min-h-[95px] py-4 px-4 md:py-5 md:px-9">
               <div class="card-content justify-center">
                 <p class="<%= advantages[i].bold %> text-16 leading-5"><%= advantages[i].listing[j] %></p>
               </div>
@@ -222,12 +222,12 @@
     <img class="hidden lg:block absolute -right-[64px] bottom-[120px] w-full max-w-[200px] xl:max-w-[320px]" src="img/pictures/patch.svg" alt="">
   </div>
   <div class="relative" data-listing>
-    <h2 class="font-semibold uppercase text-26 sm:text-30 md:text-36 leading-3 mb-7 lg:mb-14 duration-5 anim anim--right" data-anim="hidden">ПРОЗРАЧНЫЕ И ВЫГОДНЫЕ УСЛОВИЯ</h2>
+    <h2 class="font-semibold uppercase text-26 sm:text-30 md:text-36 leading-3 mb-7 lg:mb-14 duration-5 anim anim--right" data-anim="hidden">ПРОЗРАЧНЫЕ <br class="sm:hidden"> И ВЫГОДНЫЕ УСЛОВИЯ</h2>
     <div class="grid grid-cols-1 xl:grid-cols-3 xl:gap-7">
       <div class="xl:col-2 grid grid-cols-1 sm:grid-cols-2 gap-5 md:gap-7">
         <% for (var i = 0; i < conditions.length; i++) { %>
         <div class="<%= conditions[i].hidden %> duration-5 <%= conditions[i].delay %> anim anim--right" data-anim="hidden" <%= conditions[i].data %>>
-          <div class="card rounded-[26px_26px_0px_26px] h-full" data-waved="dark">
+          <div class="card rounded-[26px_26px_0px_26px] h-full">
             <div class="flex items-center justify-between gap-3 bg-primary text-white rounded-[26px_26px_0px_26px] min-h-[60px] sm:min-h-[84px] py-4 pl-3 pr-3 md:pr-4 md:pl-6">
               <h4 class="font-semibold text-18 md:text-24 leading-1"><%= conditions[i].title %></h4>
               <svg class="icon text-24 md:text-28">
@@ -305,7 +305,16 @@
 ] %>
 
 <section class="questionnaire container relative overflow-hidden" data-questionnaire>
-  <div class="absolute inset-0"></div>
+  <div class="absolute inset-0">
+    <img class="hidden xl:block absolute -left-20 top-[250px] -rotate-45 w-full max-w-[360px]" src="img/pictures/pills-pack.svg" alt="">
+    <img class="hidden xl:block absolute -right-9 top-[390px] w-full max-w-[300px]" src="img/pictures/pack-height.svg" alt="">
+    <img class="hidden xl:block absolute left-5 top-[800px] w-full max-w-[250px]" src="img/pictures/syringe.svg" alt="">
+    <img class="hidden xl:block absolute right-[150px] top-[1300px] rotate-45 w-full max-w-[250px]" src="img/pictures/pack-min.svg" alt="">
+    <img class="hidden xl:block absolute left-16 bottom-[800px] w-full max-w-[290px]" src="img/pictures/pack-circle.svg" alt="">
+    <img class="hidden xl:block absolute -right-12 bottom-[530px] w-full max-w-[290px]" src="img/pictures/tablet.svg" alt="">
+    <img class="hidden xl:block absolute -left-10 bottom-[250px] -rotate-45 w-full max-w-[250px]" src="img/pictures/pack-min.svg" alt="">
+    <img class="hidden xl:block absolute right-16 bottom-[220px] w-full max-w-[280px]" src="img/pictures/pills-large.svg" alt="">
+  </div>
   <div class="relative">
     <h2 class="font-normal uppercase text-26 sm:text-30 md:text-36 leading-3 mb-7 lg:mb-14 duration-5 anim anim--right" data-anim="hidden">
       <span class="font-semibold">КОМУ ПОДХОДИТ</span> УПРАВЛЕНЧЕСКАЯ ФРАНШИЗА?
@@ -628,7 +637,7 @@
       <% for (var i = 0; i < description.length; i++) { %>
       <div class="<%= description[i].hidden %> duration-5 anim <%= description[i].anim %>" <%= description[i].data %> data-anim="hidden">
         <div class="flex flex-col <%= description[i].flex %> lg:items-stretch lg:justify-between">
-          <div class="card z-1 rounded-4 lg:rounded-7 w-full lg:max-w-[540px]" data-waved="dark">
+          <div class="card z-1 rounded-4 lg:rounded-7 w-full lg:max-w-[540px]">
             <div class="bg-primary text-white rounded-4 lg:rounded-7 py-4 px-3 lg:py-5 lg:px-6">
               <h4 class="font-bold text-20 sm:text-24 lg:text-30 leading-2"><%= description[i].title %></h4>
             </div>
@@ -720,7 +729,7 @@
   <div class="flex items-end justify-between gap-5 relative">
     <div class="w-full lg:max-w-[530px]">
       <h2 class="font-normal uppercase text-26 sm:text-30 md:text-36 leading-3 mb-4 duration-5 anim anim--right" data-anim="hidden">
-        <span class="font-semibold">ЭКСКУРСИЯ ПО БИЗНЕСУ</span> СЕТИ АПТЕК ФАРМА
+        <span class="font-semibold">ЭКСКУРСИЯ <br class="sm:hidden"> ПО БИЗНЕСУ</span> СЕТИ АПТЕК ФАРМА
       </h2>
       <h3 class="font-normal text-14 md:text-16 leading-5 mb-7 lg:mb-14 duration-5 anim anim--right" data-anim="hidden">
         Посмотрите, как мы управляем процессами и оцените насколько это подходит вам
@@ -806,7 +815,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-7">
       <% for (var i = 0; i < experts.length; i++) { %>
       <div class="duration-5 anim <%= experts[i].anim %>" data-anim="hidden">
-        <div class="card rounded-[50px_5px_50px_50px] h-full pt-4 pb-8 px-4 sm:pt-6 sm:pb-10 sm:px-6 lg:pt-10 lg:pb-14" data-waved="dark">
+        <div class="card rounded-[50px_5px_50px_50px] h-full pt-4 pb-8 px-4 sm:pt-6 sm:pb-10 sm:px-6 lg:pt-10 lg:pb-14">
           <div class="card-content xl:flex-row xl:justify-between gap-5 sm:gap-7">
             <div class="w-full max-w-[130px] sm:max-w-[190px]">
               <div class="pack pack-box bg-grey rounded-[500px_500px_5px_500px]">
@@ -876,7 +885,7 @@
       <div class="order-1 grid grid-cols-1 sm:grid-cols-2 gap-5 sm:gap-7 relative w-full xl:max-w-[540px] mb-7 xl:mb-0">
         <% for (var i = 0; i < result.length; i++) { %>
         <div class="duration-5 anim anim--up" data-anim="hidden">
-          <div class="card rounded-[26px_26px_0px_26px] h-full" data-waved="dark">
+          <div class="card rounded-[26px_26px_0px_26px] h-full">
             <div class="flex items-center justify-between gap-3 bg-primary text-white rounded-[26px_0px_26px_26px] py-4 px-4 sm:py-5 sm:px-6">
               <h4 class="font-bold text-20 sm:text-24 leading-1"><%= result[i].number %></h4>
               <svg class="icon text-24 sm:text-28">
@@ -932,7 +941,7 @@
     <div class="flex flex-col gap-5 sm:gap-8 lg:gap-12">
       <% for (var i = 0; i < reviews.length; i++) { %>
       <div class="duration-5 anim <%= reviews[i].anim %>" data-anim="hidden">
-        <div class="card rounded-[50px_5px_50px_5px] py-6 pl-4 pr-4 sm:py-8 sm:pl-6 sm:pr-6 lg:pl-16 lg:pr-9" data-waved="dark">
+        <div class="card rounded-[50px_5px_50px_5px] py-6 pl-4 pr-4 sm:py-8 sm:pl-6 sm:pr-6 lg:pl-16 lg:pr-9">
           <div class="card-content lg:flex-row lg:justify-between gap-5 lg:gap-7">
             <div class="w-full max-w-[150px] sm:max-w-[200px]">
               <div class="pack pack-box bg-grey rounded-[50px]">
