--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <img class="hidden md:block absolute right-8 bottom-[210px] w-full max-w-[100px] lg:max-w-[230px]" src="img/pictures/syringe.svg" alt="">
   </div>
   <div class="relative">
-    <h3 class="font-normal text-14 md:text-18 leading-3 mb-3 duration-5 anim anim--right" data-anim="hidden">Первая аптечная управленческая франшиза</h3>
+    <h3 class="font-normal text-18 md:text-24 leading-3 mb-3 duration-5 anim anim--right" data-anim="hidden">Первая аптечная управленческая франшиза</h3>
     <div class="flex mb-10 xl:-mb-14">
       <h1 class="font-medium uppercase text-26 sm:text-30 md:text-36 lg:text-42 leading-3 xl:mr-10 duration-5 delay-1 anim anim--right" data-anim="hidden">
         СТАНЬТЕ ЧАСТЬЮ УСПЕШНОЙ <br class="hidden lg:block"> АПТЕЧНОЙ СЕТИ И <b>ПОЛУЧИТЕ <br class="hidden lg:block"> ЭКСКЛЮЗИВНЫЕ ПРЕИМУЩЕСТВА</b>
@@ -54,7 +54,7 @@
         </div>
         <div class="order-1 sm:order-2 flex flex-col md:flex-row md:items-center relative w-full md:w-auto mb-5 sm:mb-0">
           <div class="mb-3 md:mb-0 md:ml-0 md:mr-7 duration-5 delay-3 anim anim--right" data-anim="hidden">
-            <button class="btn btn-primary btn-lg sm:btn-xl btn-fill uppercase text-18 sm:text-24 w-full md:w-auto" data-waved="light">
+            <button class="btn btn-primary btn-lg sm:btn-xl btn-fill uppercase text-18 sm:text-24 w-full md:w-auto" data-waved="light" data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-presentation.html">
               СКАЧАТЬ ПРЕЗЕНТАЦИЮ
               <svg class="icon hidden sm:block text-28 ml-2">
                 <use xlink:href="img/icons.svg#download">
@@ -254,7 +254,7 @@
   {
     flex: 'lg:flex-row',
     number: '01',
-    text: 'Ощущение, что в мозгах застой, а в бизнесе болото. Не сил двигаться дальше.',
+    text: 'Ощущение, что в мозгах застой, а в бизнесе болото. Нет сил двигаться дальше.',
     img: '1'
   },
   {
@@ -778,7 +778,7 @@
     title: 'Александр Миронов',
     subtitle: 'генеральный директор АС «Аптека Фарма» и консалтинговой компании «Фабула»',
     textFirst: 'Более 13 лет на руководящих постах в отрасли',
-    textLast: 'Управляет хх аптеками, ххх человек в подчинении'
+    textLast: 'Управляет 350 аптеками, 200 человек в подчинении'
   },
   {
     anim: 'anim--left',
